--- a/subscriptions/sites/cnfde6_site_subscription/02_cnfde6_site_subscription.yaml
+++ b/subscriptions/sites/cnfde6_site_subscription/02_cnfde6_site_subscription.yaml
@@ -7,7 +7,7 @@ metadata:
     app: cnfde6-site-subscription
   annotations:
     apps.open-cluster-management.io/git-path: manifests/sites/cnfde6_site
-    apps.open-cluster-management.io/git-branch: main
+    apps.open-cluster-management.io/git-branch: cnfde6
 spec:
   channel: cnfde6-site-subscription/cnfde6-site-subscription 
   placement:
