--- a/subscriptions/sites/sample_site_du_subscription/02_sample_site_du_subscription.yaml
+++ b/subscriptions/sites/sample_site_du_subscription/02_sample_site_du_subscription.yaml
@@ -7,7 +7,7 @@ metadata:
     app: sample-site-du-subscription
   annotations:
     apps.open-cluster-management.io/git-path: manifests/sites/sample_site_du
-    apps.open-cluster-management.io/git-branch: main
+    apps.open-cluster-management.io/git-branch: cnfde6
 spec:
   channel: sample-site-du-subscription/sample-site-du-subscription 
   placement:
